增加文档说明

--- a/src/styles/components/avatar.scss
+++ b/src/styles/components/avatar.scss
@@ -44,7 +44,7 @@
       @include avatarIcon(48px, 30px);
     }
   }
-  &-medium {
+  &-small {
     width: 32px;
     height: 32px;
     line-height: 32px;
@@ -53,7 +53,7 @@
       @include avatarIcon(32px, 18px);
     }
   }
-  &-small {
+  &-mini {
     width: 24px;
     height: 24px;
     line-height: 24px;
