--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -21,5 +21,6 @@
 @import "./option.scss";
 @import "./input-number.scss";
 @import "./pagination.scss";
+@import "./dropdown.scss";
 
 @import "./popper.scss";
