--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -70,7 +70,7 @@
   background-color: $body-white;
   box-shadow: $popper-box-shadow;
   border-radius: $btn-radius-base;
-  z-index: 2020;
+  z-index: 10000000;
 }
 
 @mixin optionItem {
