--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -22,5 +22,7 @@
 @import "./input-number.scss";
 @import "./pagination.scss";
 @import "./dropdown.scss";
+@import "./card.scss";
+@import "./notification.scss";
 
 @import "./popper.scss";
