--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -81,6 +81,7 @@ $popper-box-shadow: 0 1px 6px rgba(0,0,0,.2) !default;
 
 $card-box-shadow: 0 2px 12px 0 rgba(0,0,0,.1) !default;
 $card-divider: $gray-color !default;
+$title-color: #464c5b !default;
 
 $sm: 768px !default;
 $md: 1024px !default;
