--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -8,6 +8,7 @@
   &-header {
     padding: 20px;
     border-bottom: 1px solid $card-divider;
+    color: $title-color;
   }
   &-body {
     padding: 20px;
