优化 popper的性能

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -24,5 +24,6 @@
 @import "./dropdown.scss";
 @import "./card.scss";
 @import "./notification.scss";
+@import "./popover.scss";
 
 @import "./popper.scss";
