--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -64,6 +64,8 @@ $collapse-transition-time: .3s !default;
 
 $rate-bg-color: #e9e9e9 !default;
 
+$popover-min-width: 150px !default;
+
 
 $form-transition-time: .15s !default;
 $form-transition-type: ease-in !default;
