--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -70,6 +70,7 @@
   background-color: $body-white;
   box-shadow: $popper-box-shadow;
   border-radius: $btn-radius-base;
+  border: 1px solid $gray-color;
   z-index: 2020;
 }
 
